-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0, 5.9.0 Alpha
-
None
-
2b20122b223f7619c7a1ba7b4a4a65194bd2a270
If we use other roles, Dialog just ignores them. For example, pressing the "Discard" button does nothing:
Dialog {
standardButtons: Dialog.Discard | Dialog.Cancel
Label {
text: "Discard changes?"
}
onAccepted: {
// never called
}
onRejected: {
// called on "Cancel" button
}
}
To be able to react to buttons, other than with accepting or rejecting roles, one should use custom DialogButtonBox. And there is no reason to be able to set this buttons via the Dialog's standardButtons property.
So, either we need an additional signal in the Dialog, like clicked() with a button or a button role, or we need to remove some enum values from the standardButtons.
- relates to
-
QTBUG-71816 Feature Request : Differentiate between dialog inputs for a same Role e.g. Yes, YestoAll
-
- Reported
-