QQuickDialogButtonBox: add missing signals

There were no convenience signals for Apply, Reset, and Discard.

[ChangeLog][Controls][DialogButtonBox] Added missing applied(),
reset(), and discarded() signals.

Task-number: QTBUG-59423
Change-Id: I49ccc60672fadf64283ff3a6e043c3892cd291ba
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>